# Connect-Four

./: CMakeLists.txt  LICENSE.txt  README.md  main.cpp
Classes/: headers.h
Classes/Functionalities/: Array1D.cpp  Array1D.h  Array2D.cpp  Array2D.h  ConnectFourStructure.cpp  ConnectFourStructure.h  SharedPointer.cpp  SharedPointer.h  TextField.cpp  TextField.h
Classes/GUI/: GameBoardManager.cpp  GameBoardManager.h  MenuScroller.cpp  MenuScroller.h
Classes/Managers/: GameBoardManager.cpp  GameBoardManager.h  GameManager.cpp  GameManager.h  MenuScroller.cpp  MenuScroller.h  MenuTextFieldScroller.cpp  MenuTextFieldScroller.h
Classes/Player/: Player.cpp  Player.h  VeiGoBot.cpp  VeiGoBot.h
Classes/Players/: Judge.cpp  Judge.h  Player.cpp  Player.h  VeiGoBot.cpp  VeiGoBot.h
Classes/Screens/: GameBoard.cpp  GameBoard.h  GameType.cpp  GameType.h  MainMenu.cpp  MainMenu.h  MenuScroller.cpp  MenuScroller.h  OnePlayer.cpp  OnePlayer.h  TextField.cpp  TwoPlayer.cpp  TwoPlayer.h
Headers/: FunctionalitiesIncludes.h  GameBoardBasic.h  includes.h
